# aoc25

./: .gitignore  CMakeLists.txt  justfile
.github/workflows/: cmake-single-platform-test.yml  cmake-single-platform.yml
include/: day01.h  day02.h  day03.h
src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp
test/: CMakeLists.txt  test_day01.cpp  test_day02.cpp  test_day03.cpp
